--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <h1>Testing bos, ini dirubah setelah di upload di git</h1>
+    <p>ini adalah file index.html yg diedit di branch bukan master (edit_html)</p>
     
 </body>
 </html>
