--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <h1>Testing bos, ini dirubah setelah di upload di git</h1>
     <p>ini adalah file index.html yg diedit di branch bukan master (edit_html)</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae maxime rem hic saepe! Adipisci, rerum soluta. At pariatur eaque est ipsam quasi doloremque corrupti cupiditate quo? Doloribus aliquam iste illo.</p>
+    <p>Lorem ipsum sit amet, consectetur adipisicing elit. Beatae maxime rem hic saepe! Adipisci, rerum soluta. At pariatur eaque est ipsam quasi doloremque corrupti cupiditate quo? Doloribus aliquam iste illo.</p>
     
 </body>
 </html>
